fix: tracker/stats layout problems

--- a/style/tracker/barangayCategories.css
+++ b/style/tracker/barangayCategories.css
@@ -38,7 +38,7 @@
     outline: 0px;
     border: 0px;
     text-align: center;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 #categoriesLabel {
@@ -48,7 +48,6 @@
     font-size: 20px;
     line-height: 24px;
     text-align: center;
-    margin-top: 50px;
     margin-bottom: 20px;
 
     color: #FFFFFF;
@@ -57,7 +56,7 @@
 .categoriesContainer {
     width: 80%;
     margin: 0 auto;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     display: grid;
     gap: 5px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
